--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="version_code_label">模块版本号</string>
     <string name="version_type_label">模块发行版本</string>
     <string name="settings_fragment_label">设置</string>
+    <string name="app_fragment_label">App</string>
     <string name="activated">已激活</string>
     <string name="unactivated">未激活</string>
     <string name="build_time_label">编译时间</string>
@@ -15,4 +16,7 @@
     <string name="restart">重启</string>
     <string name="api_version_label">API版本</string>
     <string name="config_version_label">配置文件版本</string>
+    <string name="show_hide_desktop_icons">显示/隐藏桌面图标</string>
+    <string name="getting_app_information">正在获取应用信息</string>
+    <string name="getting_app_information_tips">请稍后…</string>
 </resources>
