--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="getting_app_information">正在获取应用信息</string>
     <string name="getting_app_information_tips">请稍后…</string>
     <string name="api">API模式</string>
-    <string name="more_api">过高的API版本</string>
-    <string name="low_api">过低的API版本</string>
+    <string name="more_api">过高的API版本\n目前版本%s，所需版本%s</string>
+    <string name="low_api">过低的API版本\n目前版本%s，所需版本%s</string>
     <string name="hook">Hook模式：%s</string>
     <string name="no_support">不支持</string>
     <string name="un_know">未知</string>
