--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="hook">Hook模式：%s</string>
     <string name="no_support">不支持</string>
     <string name="un_know">未知</string>
+    <string name="app_rules_version_label">App规则版本</string>
 </resources>
