--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="uninstall_rule">未安装：共%s个规则</string>
     <string name="app_rules_tips">未知:则需要大家反馈最低支持版本\n部分软件也没有收录，欢迎提供和反馈错误</string>
     <string name="output_repeated_lyrics">输出重复歌词</string>
+    <string name="enhanced_hidden_lyrics">增强隐藏歌词</string>
+    <string name="enhanced_hidden_lyrics_tips">部分软件不适用，会导致歌词鬼畜</string>
 </resources>
