--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="new_version_detected">检测到新版本</string>
     <string name="update">更新</string>
     <string name="check_update_error">检查更新时出现错误</string>
+    <string name="app_rules_api_version_label">APP规则API版本</string>
 </resources>
