gradle from 8.1.0 to 8.1.1 添加备份与恢复

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="update">更新</string>
     <string name="check_update_error">检查更新时出现错误</string>
     <string name="app_rules_api_version_label">APP规则API版本</string>
+    <string name="backup">备份</string>
+    <string name="recovery">恢复</string>
+    <string name="recovery_summary">重启应用程序生效</string>
 </resources>
