更改部分文字描述

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="version_code_label">模块版本号</string>
     <string name="version_type_label">模块发行版本</string>
     <string name="settings_fragment_label">设置</string>
-    <string name="app_rules_fragment_label">App规则</string>
+    <string name="app_rules_fragment_label">支持APP</string>
     <string name="activated">已激活</string>
     <string name="unactivated">未激活</string>
     <string name="build_time_label">编译时间</string>
@@ -26,30 +26,30 @@
     <string name="no_support">不支持</string>
     <string name="exclude">排除版本，不支持</string>
     <string name="un_know">未知</string>
-    <string name="app_rules_version_label">App规则版本</string>
-    <string name="show_app_rules">显示所有规则</string>
-    <string name="update_app_rules">更新规则</string>
-    <string name="multi_rule">规则%s：%s</string>
-    <string name="uninstall_rule">未安装：共%s个规则</string>
-    <string name="app_rules_tips">未知:则需要大家反馈最低支持版本\n部分软件也没有收录，欢迎提供和反馈错误</string>
+    <string name="app_rules_version_label">App支持列表版本</string>
+    <string name="show_app_rules">显示所有App支持列表</string>
+    <string name="update_app_rules">更新支持列表</string>
+    <string name="multi_rule">详情%s：%s</string>
+    <string name="uninstall_rule">未安装：共支持%s个模式</string>
+    <string name="app_rules_tips">未知:不代表不能用，需要大家反馈最低支持版本收录后才能正常显示\n部分软件也没有收录，欢迎提供和反馈错误</string>
     <string name="output_repeated_lyrics">输出重复歌词</string>
     <string name="enhanced_hidden_lyrics">增强隐藏歌词</string>
     <string name="enhanced_hidden_lyrics_summary">部分软件不适用，会导致歌词鬼畜</string>
     <string name="allow_some_software_to_output_after_the_screen">允许部分软件息屏后依旧输出</string>
     <string name="regex_replace">正则表达式屏蔽歌词</string>
     <string name="device_label">设备信息</string>
-    <string name="new_rule_detected_loading">检测到新的App规则，正在加载</string>
-    <string name="new_rule_detected">检测到新的App规则</string>
-    <string name="new_rule_detected_tips">检测到新的App规则，重启生效</string>
+    <string name="new_rule_detected_loading">检测到新的App支持列表，正在加载</string>
+    <string name="new_rule_detected">检测到新的App支持列表</string>
+    <string name="new_rule_detected_tips">检测到新的App支持列表，重启生效</string>
     <string name="new_version_detected">检测到新版本</string>
     <string name="update">更新</string>
     <string name="check_update_error">检查更新时出现错误</string>
-    <string name="app_rules_api_version_label">APP规则API版本</string>
+    <string name="app_rules_api_version_label">App支持列表API版本</string>
     <string name="backup">备份</string>
     <string name="recovery">恢复</string>
     <string name="recovery_summary">重启应用程序生效</string>
-    <string name="select_the_rule_you_want_to_view">请选择要查看的规则</string>
-    <string name="rule">规则 %s</string>
+    <string name="select_the_mode_you_want_to_view">请选择要查看当前的App支持模式</string>
+    <string name="mode_num">App支持模式 %s</string>
     <string name="cancel">取消</string>
     <string name="ok">确定</string>
     <string name="api_version">API版本</string>
@@ -66,7 +66,7 @@
     <string name="desktop_lyrics_mode">桌面歌词模式</string>
     <string name="enforced_mode">强制模式</string>
     <string name="current_status">当前状态</string>
-    <string name="rules_are_only_for_viewing_supported_versions">规则仅供查看支持软件版本\n与实际获取检测没有关联</string>
+    <string name="rules_are_only_for_viewing_supported_versions">App支持列表仅供查看支持软件版本\n与实际获取可能有部分出入</string>
     <string name="notice">通知</string>
     <string name="salt_use_flyme">椒盐/糖醋音乐使用魅族状态栏歌词接口</string>
     <string name="salt_use_flyme_summary">在API模式正常时，不建议切换</string>
