--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="show_hide_desktop_icons">显示/隐藏桌面图标</string>
     <string name="getting_app_information">正在获取应用信息</string>
     <string name="getting_app_information_tips">请稍后…</string>
-    <string name="api">API模式</string>
+    <string name="api">API模式%s</string>
     <string name="more_api">过高的API版本\n目前版本%s，所需版本%s</string>
     <string name="low_api">过低的API版本\n目前版本%s，所需版本%s</string>
     <string name="hook">Hook模式：%s</string>
@@ -70,4 +70,5 @@
     <string name="notice">通知</string>
     <string name="salt_use_flyme">椒盐/糖醋音乐使用魅族状态栏歌词接口</string>
     <string name="salt_use_flyme_summary">在API模式正常时，不建议切换</string>
+    <string name="multiple_modes_work">有多个可正常使用的模式</string>
 </resources>
