--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,75 +1,75 @@
 <resources>
     <string name="app_name">Lyrics Getter</string>
     <string name="xposed_desc">Lyrics Getter</string>
-    <string name="home_fragment_label">主页</string>
-    <string name="version_name_label">模块版本</string>
-    <string name="version_code_label">模块版本号</string>
-    <string name="version_type_label">模块发行版本</string>
-    <string name="settings_fragment_label">设置</string>
-    <string name="app_rules_fragment_label">支持APP列表</string>
-    <string name="activated">已激活</string>
-    <string name="unactivated">未激活</string>
-    <string name="build_time_label">编译时间</string>
-    <string name="unactivated_summary">点此重启软件</string>
-    <string name="welcome">欢迎使用</string>
-    <string name="restart_the_scoped_software">重启作用域软件</string>
-    <string name="restart">重启</string>
-    <string name="api_version_label">API版本</string>
-    <string name="config_version_label">配置文件版本</string>
-    <string name="show_hide_desktop_icons">显示/隐藏桌面图标</string>
-    <string name="getting_app_information">正在获取应用信息</string>
-    <string name="getting_app_information_tips">请稍后…</string>
-    <string name="api">API模式%s</string>
-    <string name="more_api">过高的API版本\n目前版本%s，所需版本%s</string>
-    <string name="low_api">过低的API版本\n目前版本%s，所需版本%s</string>
-    <string name="hook">Hook模式：%s</string>
-    <string name="no_support">不支持</string>
-    <string name="exclude">排除版本，不支持</string>
-    <string name="un_know">未收录</string>
-    <string name="app_rules_version_label">App支持列表版本</string>
-    <string name="show_app_rules">显示所有App支持列表</string>
-    <string name="update_app_rules">更新支持列表</string>
-    <string name="multi_rule">详情%s：%s</string>
-    <string name="uninstall_rule">未安装：共支持%s个模式</string>
-    <string name="app_rules_tips">未收录:不代表不能用，需要大家反馈最低支持版本收录后才能正常显示\n部分软件也没有收录，欢迎提供和反馈错误</string>
-    <string name="output_repeated_lyrics">输出重复歌词</string>
-    <string name="enhanced_hidden_lyrics">增强隐藏歌词</string>
-    <string name="enhanced_hidden_lyrics_summary">部分软件不适用，会导致歌词鬼畜</string>
-    <string name="allow_some_software_to_output_after_the_screen">允许部分软件息屏后依旧输出</string>
-    <string name="regex_replace">正则表达式屏蔽歌词</string>
-    <string name="device_label">设备信息</string>
-    <string name="new_rule_detected_loading">检测到新的App支持列表，正在加载</string>
-    <string name="new_rule_detected">检测到新的App支持列表</string>
-    <string name="new_rule_detected_tips">检测到新的App支持列表，重启生效</string>
-    <string name="new_version_detected">检测到新版本</string>
-    <string name="update">更新</string>
-    <string name="check_update_error">检查更新时出现错误</string>
-    <string name="app_rules_api_version_label">App支持列表API版本</string>
-    <string name="backup">备份</string>
-    <string name="recovery">恢复</string>
-    <string name="recovery_summary">重启应用程序生效</string>
-    <string name="select_the_mode_you_want_to_view">请选择要查看当前的App支持模式</string>
-    <string name="mode_num">App支持模式 %s</string>
-    <string name="cancel">取消</string>
-    <string name="ok">确定</string>
-    <string name="api_version">API版本</string>
-    <string name="start_version_code">起始版本代码</string>
-    <string name="end_version_code">结束版本代码</string>
-    <string name="exclude_versions">排除版本</string>
-    <string name="get_lyric_type">获取歌词类型</string>
-    <string name="remarks">备注</string>
-    <string name="use_api">使用API</string>
-    <string name="no_have">无</string>
-    <string name="api_pattern">API模式</string>
-    <string name="meizu_status_bar_mode">魅族状态栏模式</string>
-    <string name="car_bluetooth_lyrics_mode">车载蓝牙歌词模式</string>
-    <string name="desktop_lyrics_mode">桌面歌词模式</string>
-    <string name="enforced_mode">强制模式</string>
-    <string name="current_status">当前状态</string>
-    <string name="rules_are_only_for_viewing_supported_versions">App支持列表仅供查看支持软件版本\n与实际获取可能有部分出入</string>
-    <string name="notice">通知</string>
-    <string name="salt_use_flyme">椒盐/糖醋音乐使用魅族状态栏歌词接口</string>
-    <string name="salt_use_flyme_summary">在API模式正常时，不建议切换</string>
-    <string name="multiple_modes_work">有多个可正常使用的模式</string>
-    <string name="show_title">强制显示标题</string>
+    <string name="home_fragment_label">Home</string>
+    <string name="version_name_label">Module Version</string>
+    <string name="version_code_label">Module Version Number</string>
+    <string name="version_type_label">Module Release Version</string>
+    <string name="settings_fragment_label">Settings</string>
+    <string name="app_rules_fragment_label">Supported APP List</string>
+    <string name="activated">Activated</string>
+    <string name="unactivated">Not Activated</string>
+    <string name="build_time_label">Build Time</string>
+    <string name="unactivated_summary">Click to restart the software</string>
+    <string name="welcome">Welcome to use</string>
+    <string name="restart_the_scoped_software">Restart the scoped software</string>
+    <string name="restart">Restart</string>
+    <string name="api_version_label">API Version</string>
+    <string name="config_version_label">Configuration File Version</string>
+    <string name="show_hide_desktop_icons">Show/Hide Desktop Icons</string>
+    <string name="getting_app_information">Getting App Information</string>
+    <string name="getting_app_information_tips">Please wait…</string>
+    <string name="api">API Mode %s</string>
+    <string name="more_api">Too high API version\nCurrent version %s, required version %s</string>
+    <string name="low_api">Too low API version\nCurrent version %s, required version %s</string>
+    <string name="hook">Hook Mode: %s</string>
+    <string name="no_support">Not Supported</string>
+    <string name="exclude">Exclude version, not supported</string>
+    <string name="un_know">Not Included</string>
+    <string name="app_rules_version_label">App Support List Version</string>
+    <string name="show_app_rules">Show All App Support List</string>
+    <string name="update_app_rules">Update Support List</string>
+    <string name="multi_rule">Details %s: %s</string>
+    <string name="uninstall_rule">Not Installed: Supports %s modes in total</string>
+    <string name="app_rules_tips">Not included: does not mean it can\'t be used, it needs everyone to feedback the lowest support version after the inclusion can be normally displayed\nSome software is also not included, welcome to provide and feedback errors</string>
+    <string name="output_repeated_lyrics">Output Repeated Lyrics</string>
+    <string name="enhanced_hidden_lyrics">Enhanced Hidden Lyrics</string>
+    <string name="enhanced_hidden_lyrics_summary">Some software is not applicable, it will cause the lyrics to be ghosted</string>
+    <string name="allow_some_software_to_output_after_the_screen">Allow some software to continue output after the screen is off</string>
+    <string name="regex_replace">Regular Expression to Block Lyrics</string>
+    <string name="device_label">Device Information</string>
+    <string name="new_rule_detected_loading">New App Support List Detected, Loading</string>
+    <string name="new_rule_detected">New App Support List Detected</string>
+    <string name="new_rule_detected_tips">New App Support List Detected, Restart to Take Effect</string>
+    <string name="new_version_detected">New Version Detected</string>
+    <string name="update">Update</string>
+    <string name="check_update_error">Error Occurred While Checking for Updates</string>
+    <string name="app_rules_api_version_label">App Support List API Version</string>
+    <string name="backup">Backup</string>
+    <string name="recovery">Recovery</string>
+    <string name="recovery_summary">Restart the application to take effect</string>
+    <string name="select_the_mode_you_want_to_view">Please select the current App support mode you want to view</string>
+    <string name="mode_num">App Support Mode %s</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="api_version">API Version</string>
+    <string name="start_version_code">Start Version Code</string>
+    <string name="end_version_code">End Version Code</string>
+    <string name="exclude_versions">Exclude Versions</string>
+    <string name="get_lyric_type">Get Lyric Type</string>
+    <string name="remarks">Remarks</string>
+    <string name="use_api">Use API</string>
+    <string name="no_have">None</string>
+    <string name="api_pattern">API Mode</string>
+    <string name="meizu_status_bar_mode">Meizu Status Bar Mode</string>
+    <string name="car_bluetooth_lyrics_mode">Car Bluetooth Lyrics Mode</string>
+    <string name="desktop_lyrics_mode">Desktop Lyrics Mode</string>
+    <string name="enforced_mode">Enforced Mode</string>
+    <string name="current_status">Current Status</string>
+    <string name="rules_are_only_for_viewing_supported_versions">App support list is only for viewing supported software versions\nThere may be some discrepancies with the actual acquisition</string>
+    <string name="notice">Notice</string>
+    <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu status bar lyrics interface</string>
+    <string name="salt_use_flyme_summary">It is not recommended to switch when the API mode is normal</string>
+    <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
+    <string name="show_title">Force Show Title</string>
 </resources>
