--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,6 @@
     <string name="salt_use_flyme_summary">It is not recommended to switch when the API mode is normal</string>
     <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
     <string name="show_title">Force Show Title</string>
+    <string name="stop_option1">Lyrics pause option one</string>
+    <string name="stop_option2">Lyrics pause plan two</string>
 </resources>
