Update English translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,75 +2,75 @@
     <string name="app_name">Lyrics Getter</string>
     <string name="xposed_desc">Lyrics Getter</string>
     <string name="home_fragment_label">Home</string>
-    <string name="version_name_label">Module Version</string>
-    <string name="version_code_label">Module Version Number</string>
-    <string name="version_type_label">Module Release Version</string>
+    <string name="version_name_label">Module version</string>
+    <string name="version_code_label">Module version number</string>
+    <string name="version_type_label">Module release version</string>
     <string name="settings_fragment_label">Settings</string>
-    <string name="app_rules_fragment_label">Supported APP</string>
+    <string name="app_rules_fragment_label">Supported app</string>
     <string name="activated">Activated</string>
-    <string name="unactivated">Not Activated</string>
-    <string name="build_time_label">Build Time</string>
-    <string name="unactivated_summary">Click to restart the software</string>
+    <string name="unactivated">Not activated</string>
+    <string name="build_time_label">Build time</string>
+    <string name="unactivated_summary">Click here to restart the software</string>
     <string name="welcome">Welcome to use</string>
     <string name="restart_the_scoped_software">Restart the scoped software</string>
     <string name="restart">Restart</string>
-    <string name="api_version_label">API Version</string>
-    <string name="config_version_label">Configuration File Version</string>
-    <string name="show_hide_desktop_icons">Show/Hide Desktop Icons</string>
-    <string name="getting_app_information">Getting App Information</string>
+    <string name="api_version_label">API version</string>
+    <string name="config_version_label">Configuration file version</string>
+    <string name="show_hide_desktop_icons">Show/hide desktop icons</string>
+    <string name="getting_app_information">Getting app information</string>
     <string name="getting_app_information_tips">Please wait…</string>
-    <string name="api">API Mode %s</string>
+    <string name="api">API mode: %s</string>
     <string name="more_api">Too high API version\nCurrent version %s, required version %s</string>
     <string name="low_api">Too low API version\nCurrent version %s, required version %s</string>
-    <string name="hook">Hook Mode: %s</string>
-    <string name="no_support">Not Supported</string>
-    <string name="exclude">Exclude version, not supported</string>
-    <string name="un_know">Not Included</string>
-    <string name="app_rules_version_label">App Support List Version</string>
-    <string name="show_app_rules">Show All App Support List</string>
-    <string name="update_app_rules">Update Support List</string>
+    <string name="hook">Hook mode: %s</string>
+    <string name="no_support">Not supported</string>
+    <string name="exclude">Exclude version, not supported.</string>
+    <string name="un_know">Not included</string>
+    <string name="app_rules_version_label">App support list version</string>
+    <string name="show_app_rules">Show all app support list</string>
+    <string name="update_app_rules">Update support list</string>
     <string name="multi_rule">Details %1$s: %2$s</string>
-    <string name="uninstall_rule">Not Installed: Supports %s modes in total</string>
-    <string name="app_rules_tips">Not included: It doesn\'t mean that it can\'t be used, it just means that you don\'t know the minimum supported version, so there are no inclusion rules\nSome software is not included, welcome to provide and feedback errors</string>
-    <string name="output_repeated_lyrics">Output Repeated Lyrics</string>
-    <string name="enhanced_hidden_lyrics">Enhanced Hidden Lyrics</string>
-    <string name="enhanced_hidden_lyrics_summary">Some software is not applicable, it will cause the lyrics to be ghosted</string>
+    <string name="uninstall_rule">Not installed: Supports %s modes in total</string>
+    <string name="app_rules_tips">Not included: It doesn\'t mean that it can\'t be used; it just means that you don\'t know the minimum supported version, so there are no inclusion rules.\nSome software isn\'t included. You\'re welcome to provide feedback and report errors.</string>
+    <string name="output_repeated_lyrics">Output repeated lyrics</string>
+    <string name="enhanced_hidden_lyrics">Enhanced hidden lyrics</string>
+    <string name="enhanced_hidden_lyrics_summary">Some software isn\'t applicable, this will cause the lyrics to be ghosted.</string>
     <string name="allow_some_software_to_output_after_the_screen">Allow some software to continue output after the screen is off</string>
-    <string name="regex_replace">Regular Expression to Block Lyrics</string>
-    <string name="device_label">Device Information</string>
-    <string name="new_rule_detected_loading">New App Support List Detected, Loading</string>
-    <string name="new_rule_detected">New App Support List Detected</string>
-    <string name="new_rule_detected_tips">New App Support List Detected, Restart to Take Effect</string>
-    <string name="new_version_detected">New Version Detected</string>
+    <string name="regex_replace">Regular expression to block lyrics</string>
+    <string name="device_label">Device information</string>
+    <string name="new_rule_detected_loading">New app support list detected. Loading…</string>
+    <string name="new_rule_detected">New app support list detected</string>
+    <string name="new_rule_detected_tips">New app support list detected. Restart to take effect.</string>
+    <string name="new_version_detected">New version detected</string>
     <string name="update">Update</string>
-    <string name="check_update_error">Error Occurred While Checking for Updates</string>
-    <string name="app_rules_api_version_label">App Support List API Version</string>
+    <string name="check_update_error">An error occurred while checking for updates</string>
+    <string name="app_rules_api_version_label">App support list API version</string>
     <string name="backup">Backup</string>
     <string name="recovery">Recovery</string>
-    <string name="recovery_summary">Restart the application to take effect</string>
-    <string name="select_the_mode_you_want_to_view">Please select the current App support mode you want to view</string>
-    <string name="mode_num">App Support Mode %s</string>
+    <string name="recovery_summary">Restart the app to take effect</string>
+    <string name="select_the_mode_you_want_to_view">Please select the current app support mode you want to view</string>
+    <string name="mode_num">App support mode %s</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
-    <string name="api_version">API Version</string>
-    <string name="start_version_code">Start Version Code</string>
-    <string name="end_version_code">End Version Code</string>
-    <string name="exclude_versions">Exclude Versions</string>
-    <string name="get_lyric_type">Get Lyric Type</string>
+    <string name="api_version">API version</string>
+    <string name="start_version_code">Start version code</string>
+    <string name="end_version_code">End version code</string>
+    <string name="exclude_versions">Exclude versions</string>
+    <string name="get_lyric_type">Get lyric type</string>
     <string name="remarks">Remarks</string>
     <string name="use_api">Use API</string>
     <string name="no_have">None</string>
-    <string name="api_pattern">API Mode</string>
-    <string name="meizu_status_bar_mode">Meizu Status Bar Mode</string>
-    <string name="car_bluetooth_lyrics_mode">Car Bluetooth Lyrics Mode</string>
-    <string name="desktop_lyrics_mode">Desktop Lyrics Mode</string>
-    <string name="enforced_mode">Enforced Mode</string>
-    <string name="current_status">Current Status</string>
-    <string name="rules_are_only_for_viewing_supported_versions">App support list is only for viewing supported software versions\nThere may be some discrepancies with the actual acquisition\nThe actual hook fetches the lyrics and does not refer to the data on this page</string>
+    <string name="api_pattern">API mode</string>
+    <string name="meizu_status_bar_mode">Meizu status bar mode</string>
+    <string name="car_bluetooth_lyrics_mode">Car Bluetooth lyrics mode</string>
+    <string name="desktop_lyrics_mode">Desktop lyrics mode</string>
+    <string name="enforced_mode">Enforced mode</string>
+    <string name="current_status">Current status</string>
+    <string name="rules_are_only_for_viewing_supported_versions">The App support list is only for viewing supported software versions.\nThere may be some discrepancies with the actual acquisition\nThe actual hook fetches the lyrics and doesn\'t refer to the data on this page.</string>
     <string name="notice">Notice</string>
     <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu status bar lyrics interface</string>
-    <string name="salt_use_flyme_summary">It is not recommended to switch when the API mode is normal</string>
+    <string name="salt_use_flyme_summary">It isn\'t recommended to switch when the API mode is normal</string>
     <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
-    <string name="show_title">Force Show Title</string>
-    <string name="version_differences">The release version will not output logs, and the Debug version will output logs, so it is recommended not to install the Debug version</string>
+    <string name="show_title">Force show title</string>
+    <string name="version_differences">The release version won\'t generate logs, and the Debug version will generate logs, so it\'s recommended not to install the Debug version.</string>
 </resources>
