--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="app_name">Lyrics Getter</string>
   <string name="xposed_desc">Lyrics Getter</string>
   <string name="home_fragment_label">ホーム</string>
   <string name="version_name_label">モジュールのバージョン</string>
-  <string name="version_code_label">モジュールバージョン番号</string>
-  <string name="version_type_label">モジュールの最新バージョン</string>
+  <string name="version_code_label">モジュールのバージョン番号</string>
+  <string name="version_type_label">モジュールのリリースバージョン</string>
   <string name="settings_fragment_label">設定</string>
-  <string name="app_rules_fragment_label">サポートしているアプリ</string>
+  <string name="app_rules_fragment_label">サポート</string>
   <string name="activated">有効</string>
   <string name="unactivated">無効</string>
   <string name="build_time_label">ビルド日時</string>
   <string name="unactivated_summary">タップでアプリを再起動します</string>
   <string name="welcome">ご利用ありがとうございます</string>
-  <string name="restart_the_scoped_software">スコープされたアプリを再起動</string>
+  <string name="restart_the_scoped_software">スコープされたアプリを再起動します</string>
   <string name="restart">再起動</string>
   <string name="api_version_label">API バージョン</string>
   <string name="config_version_label">設定ファイルのバージョン</string>
@@ -28,15 +28,15 @@
   <string name="exclude">バージョンを除外、非対応</string>
   <string name="un_know">含まれていない</string>
   <string name="app_rules_version_label">アプリサポートリストのバージョン</string>
-  <string name="show_app_rules">すべてのアプリサポートリストを表示</string>
+  <string name="show_app_rules">サポートリストをすべて表示</string>
   <string name="update_app_rules">サポートリストを更新</string>
   <string name="multi_rule">詳細 %1$s: %2$s</string>
-  <string name="uninstall_rule">未インストール: 合計で %s のモードに対応</string>
-  <string name="app_rules_tips">含まれていない: 使用できないわけではなく、対応している最小バージョンが不明なだけなので含めるルールがないだけです。\n一部のアプリが含まれていません。エラーを提供してフィードバックを送信してください。</string>
-  <string name="output_repeated_lyrics">繰り返しで歌詞を出力する</string>
+  <string name="uninstall_rule">未インストール: 合計で %s 件のモードに対応</string>
+  <string name="app_rules_tips">含まれていない: 使用できないわけではなく、対応している最小バージョンが不明なだけなので含めるルールがないだけです。\n一部のアプリが含まれていません。エラーを取得してフィードバックを送信してください。</string>
+  <string name="output_repeated_lyrics">繰り返しで歌詞を出力</string>
   <string name="enhanced_hidden_lyrics">強化された隠された歌詞</string>
   <string name="enhanced_hidden_lyrics_summary">一部のアプリでは適用できず、歌詞がゴースト化する可能性があります</string>
-  <string name="allow_some_software_to_output_after_the_screen">一部のアプリで画面が OFF の状態でも歌詞の出力を継続できるようにします</string>
+  <string name="allow_some_software_to_output_after_the_screen">画面を消灯後でも歌詞を表示 (一部)</string>
   <string name="regex_replace">歌詞をブロックする正規表現</string>
   <string name="device_label">デバイス情報</string>
   <string name="new_rule_detected_loading">新しいアプリサポートリストを検出、読み込み中です。</string>
@@ -67,11 +67,11 @@
   <string name="desktop_lyrics_mode">デスクトップ歌詞モード</string>
   <string name="enforced_mode">強制モード</string>
   <string name="current_status">現在の状態</string>
-  <string name="rules_are_only_for_viewing_supported_versions">アプリのサポートリストは、サポートされているソフトウェアバージョンを表示するための物です。\n実際の取得とは多少の相違がある可能性があります。\n実際のフックは歌詞を取得してこのページのデータは参照しません。</string>
+  <string name="rules_are_only_for_viewing_supported_versions">アプリのサポートリストは、サポートされているアプリバージョンを表示するための物です。\n実際の取得とは多少の相違がある可能性があります。\n実際のフックは歌詞を取得してこのページのデータは参照しません。</string>
   <string name="notice">お知らせ</string>
-  <string name="salt_use_flyme">Salt/Sweet and Sour Music は Meizu のステータスバーの歌詞インターフェースを採用しています</string>
-  <string name="salt_use_flyme_summary">API モードが通常時に切り替えを行うことは非推奨です</string>
-  <string name="multiple_modes_work">通常使用できるモードは複数あります</string>
+  <string name="salt_use_flyme">Salt Player で Meizu モードを使用</string>
+  <string name="salt_use_flyme_summary">API モードが通常時での切り替えを行うことは非推奨です</string>
+  <string name="multiple_modes_work">通常使用できるモードが複数あります</string>
   <string name="show_title">タイトル表示を強制</string>
   <string name="version_differences">リリース版はログを出力しませんが、デバッグ版はログを出力します。開発者以外はデバッグ版をインストールしないことを推奨します。</string>
 </resources>
