opt: 添加新版本网易云歌词强开

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -73,4 +73,5 @@
     <string name="multiple_modes_work">有多个可正常使用的模式</string>
     <string name="show_title">强制显示标题</string>
     <string name="version_differences">发行版本 Release 不会输出 Log，Debug 版本会输出 Log，非必要不建议安装 Debug 版本</string>
+    <string name="fuckwyy">网易云状态栏歌词强开</string>
 </resources>
