--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -73,4 +73,5 @@
     <string name="multiple_modes_work">Existem vários modos que podem ser usados ​​normalmente</string>
     <string name="show_title">Forçar título de exibição</string>
     <string name="version_differences">A versão de lançamento não gerará logs e a versão Debug gerará logs, portanto, é recomendado não instalar a versão Debug.</string>
+    <string name="fuckwyy">Forçar abertura das letras na barra de status do NetEase Cloud</string>
 </resources>
