--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -77,4 +77,6 @@
     <string name="fuckwyy_tips">开启开关可能导致网易云出现异常，本模块概不负责</string>
     <string name="fuckfuckwyy">禁用网易云检测</string>
     <string name="fuckfuckwyy_tips">尝试绕过网易云 Hook 检测，如因此被封禁本模块概不负责</string>
+    <string name="fuckwyyabout">网易云歌词获取设置</string>
+    <string name="lyricsetting">歌词获取设置</string>
 </resources>
