--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -79,4 +79,12 @@
     <string name="fuckfuckwyy_tips">尝试绕过网易云 Hook 检测，如因此被封禁本模块概不负责</string>
     <string name="fuckwyyabout">网易云歌词获取设置</string>
     <string name="lyricsetting">歌词获取设置</string>
+    <string name="test_app_delay">延迟时间（毫秒）</string>
+    <string name="test_app_useOwnMusicController">是否使用自定义音乐控制器</string>
+    <string name="test_app_customIcon">是否使用自定义图标</string>
+    <string name="test_app_lyric">软件歌词</string>
+    <string name="test_app_play">播放状态</string>
+    <string name="test_app_name">软件包名称</string>
+    <string name="testlyric">歌词获取测试</string>
+    <string name="test_app_base64Icon">"base64图标 "</string>
 </resources>
