--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -82,9 +82,9 @@
     <string name="test_app_delay">延迟时间（毫秒）</string>
     <string name="test_app_useOwnMusicController">是否使用自定义音乐控制器</string>
     <string name="test_app_customIcon">是否使用自定义图标</string>
+    <string name="test_app_icon">软件图标</string>
     <string name="test_app_lyric">软件歌词</string>
     <string name="test_app_play">播放状态</string>
     <string name="test_app_name">软件包名称</string>
     <string name="testlyric">歌词获取测试</string>
-    <string name="test_app_base64Icon">"base64图标 "</string>
 </resources>
