--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,15 @@
     <string name="fuckwyy">Force opening of lyrics in NetEase Cloud status bar</string>
     <string name="fuckwyy_tips">Turning on the switch may cause abnormalities in NetEase Cloud, which isn\'t responsible for this module.</string>
     <string name="fuckfuckwyy">Disable NetEase Cloud detection</string>
-    <string name="fuckfuckwyy_tips">Try to bypass NetEase Cloud Hook detection. We\'re not responsible if you\'re blocked because of this module.</string>
+    <string name="fuckfuckwyy_tips">Try to bypass NetEase Cloud Hook detection, not responsible if you are blocked because of this module.</string>
+    <string name="fuckwyyabout">NetEase Cloud Lyrics Getting Settings</string>
+    <string name="lyricsetting">Lyrics acquisition settings</string>
+    <string name="test_app_delay">Delay time (ms)</string>
+    <string name="test_app_useOwnMusicController">Is use custom music controller</string>
+    <string name="test_app_customIcon">Is use custom icon</string>
+    <string name="test_app_icon">App icon</string>
+    <string name="test_app_lyric">App lyrics</string>
+    <string name="test_app_play">Playback status</string>
+    <string name="test_app_name">App name</string>
+    <string name="testlyric">Lyrics test</string>
 </resources>
