--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,11 @@
     <string name="build_time_label">Build time</string>
     <string name="unactivated_summary">Click here to restart the software</string>
     <string name="welcome">Welcome to use</string>
-    <string name="restart_the_scoped_software">Restart the scoped software</string>
+    <string name="restart_the_scoped_software">Restart the software with the defined scope</string>
     <string name="restart">Restart</string>
     <string name="api_version_label">API version</string>
     <string name="config_version_label">Configuration file version</string>
-    <string name="show_hide_desktop_icons">Show/hide desktop icons</string>
+    <string name="show_hide_desktop_icons">Show/hide Home screen icons</string>
     <string name="getting_app_information">Getting app information</string>
     <string name="getting_app_information_tips">Please wait…</string>
     <string name="api">API mode: %s</string>
@@ -48,7 +48,7 @@
     <string name="backup">Backup</string>
     <string name="recovery">Recovery</string>
     <string name="recovery_summary">Restart the app to take effect</string>
-    <string name="select_the_mode_you_want_to_view">Please select the current app support mode you want to view</string>
+    <string name="select_the_mode_you_want_to_view">Select the current app support mode you want to view</string>
     <string name="mode_num">App support mode %s</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
@@ -66,22 +66,22 @@
     <string name="desktop_lyrics_mode">Desktop lyrics mode</string>
     <string name="enforced_mode">Enforced mode</string>
     <string name="current_status">Current status</string>
-    <string name="rules_are_only_for_viewing_supported_versions">The App support list is only for viewing supported software versions.\nThere may be some discrepancies with the actual acquisition\nThe actual hook fetches the lyrics and doesn\'t refer to the data on this page.</string>
+    <string name="rules_are_only_for_viewing_supported_versions">The App support list is only for viewing supported software versions.\nThere may be some discrepancies with the actual acquisition.\nThe actual hook fetches the lyrics and doesn\'t refer to the data on this page.</string>
     <string name="notice">Notice</string>
-    <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu status bar lyrics interface</string>
+    <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu interface</string>
     <string name="salt_use_flyme_summary">It isn\'t recommended to switch when the API mode is normal</string>
     <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
     <string name="show_title">Force show title</string>
-    <string name="version_differences">The release version won\'t generate logs, and the Debug version will generate logs, so it\'s recommended not to install the Debug version.</string>
+    <string name="version_differences">The release version doesn\'t generate logs, while the Debug version generates logs. Therefore, it\'s recommended not to install the Debug version.</string>
     <string name="fuckwyy">Force opening of lyrics in NetEase Cloud status bar</string>
     <string name="fuckwyy_tips">Turning on the switch may cause abnormalities in NetEase Cloud, which isn\'t responsible for this module.</string>
     <string name="fuckfuckwyy">Disable NetEase Cloud detection</string>
-    <string name="fuckfuckwyy_tips">Try to bypass NetEase Cloud Hook detection, not responsible if you are blocked because of this module.</string>
-    <string name="fuckwyyabout">NetEase Cloud Lyrics Getting Settings</string>
+    <string name="fuckfuckwyy_tips">Try to bypass NetEase Cloud Hook detection. We\'re not responsible if you\'re blocked because of this module.</string>
+    <string name="fuckwyyabout">NetEase Cloud lyrics acquisition settings</string>
     <string name="lyricsetting">Lyrics acquisition settings</string>
     <string name="test_app_delay">Delay time (ms)</string>
-    <string name="test_app_useOwnMusicController">Is use custom music controller</string>
-    <string name="test_app_customIcon">Is use custom icon</string>
+    <string name="test_app_useOwnMusicController">Custom music controller</string>
+    <string name="test_app_customIcon">Custom icon</string>
     <string name="test_app_icon">App icon</string>
     <string name="test_app_lyric">App lyrics</string>
     <string name="test_app_play">Playback status</string>
