--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_rules_fragment_label">App compatível</string>
     <string name="activated">Ativado</string>
     <string name="unactivated">Não ativado</string>
-    <string name="build_time_label">Hora da construção</string>
+    <string name="build_time_label">Hora da compilação</string>
     <string name="unactivated_summary">Clique aqui para reiniciar o software</string>
     <string name="welcome">Seja bem-vindo para usar</string>
     <string name="restart_the_scoped_software">Reinicie o software com o escopo definido</string>
@@ -35,7 +35,7 @@
     <string name="output_repeated_lyrics">Saída de letras repetidas</string>
     <string name="enhanced_hidden_lyrics">Letras ocultas aprimoradas</string>
     <string name="enhanced_hidden_lyrics_summary">Alguns softwares não são aplicáveis, isso fará com que as letras fiquem fantasmas.</string>
-    <string name="allow_some_software_to_output_after_the_screen">Permitir que algum software continue a produzir depois que a tela for desligada</string>
+    <string name="allow_some_software_to_output_after_the_screen">Permitir que algum software continue a exibir saída após a tela desligar</string>
     <string name="regex_replace">Expressão regular para bloquear letras</string>
     <string name="device_label">Informações do dispositivo</string>
     <string name="new_rule_detected_loading">Nova lista de suporte de apps detectada. Carregando…</string>
@@ -68,13 +68,23 @@
     <string name="current_status">Status atual</string>
     <string name="rules_are_only_for_viewing_supported_versions">A Lista de suporte de apps serve apenas para ver versões de software suportadas.\nPode haver algumas discrepâncias com a aquisição real.\nO hook real busca as letras e não se refere aos dados nesta página.</string>
     <string name="notice">Aviso</string>
-    <string name="salt_use_flyme">Salt/Sweet e Sour Music usa interface de letras da barra de status Meizu</string>
+    <string name="salt_use_flyme">Salt/Sweet e Sour Music usa a interface Meizu</string>
     <string name="salt_use_flyme_summary">Não é recomendado alternar quando o Modo da API estiver normal</string>
     <string name="multiple_modes_work">Existem vários modos que podem ser usados ​​normalmente</string>
     <string name="show_title">Forçar título de exibição</string>
-    <string name="version_differences">A versão de lançamento não gerará logs e a versão Debug gerará logs, portanto, é recomendado não instalar a versão Debug.</string>
+    <string name="version_differences">A versão de lançamento não gera logs, enquanto a versão Debug gera logs. Por isso, recomenda-se não instalar a versão Debug.</string>
     <string name="fuckwyy">Forçar abertura das letras na barra de status do NetEase Cloud</string>
     <string name="fuckwyy_tips">Ativar o interruptor pode causar anomalias no NetEase Cloud, que não se responsabiliza por este módulo.</string>
     <string name="fuckfuckwyy">Desativar detecção do NetEase Cloud</string>
     <string name="fuckfuckwyy_tips">Tente ignorar a detecção do NetEase Cloud Hook. Não nos responsabilizamos caso você seja bloqueado por esse módulo.</string>
+    <string name="fuckwyyabout">Configurações de aquisição de letras do NetEase Cloud</string>
+    <string name="lyricsetting">Configurações de aquisição de letras</string>
+    <string name="test_app_delay">Tempo de atraso (ms)</string>
+    <string name="test_app_useOwnMusicController">Controlador de música personalizado</string>
+    <string name="test_app_customIcon">Ícone personalizado</string>
+    <string name="test_app_icon">Ícone do app</string>
+    <string name="test_app_lyric">Letras do app</string>
+    <string name="test_app_play">Status de reprodução</string>
+    <string name="test_app_name">Nome do app</string>
+    <string name="testlyric">Testar letras</string>
 </resources>
